reformatted json so that multiple different entries give the same output and simplified mock finn

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1,8 +1,22 @@
-{
-  "hydration": "Most adults need 2–3 liters of water daily.",
-  "sleep": "Aim for 7–9 hours of sleep each night.",
-  "stress": "Try deep breathing to reduce stress.",
-  "tired": "You may be stressed or lack sleep, try asking Finn about either.",
-  "eat": "Aim for a balanced diet of fruits and vegetables, grains, healthy fats, etc.",
-  "exercise": "Adults should try to get at least 30 minutes of exercise every day."
-}
+[
+  {
+    "keywords": ["water", "drink", "hydration", "thirsty"],
+    "answer": "Most adults need 2–3 liters of water daily."
+  },
+  {
+    "keywords": ["sleep", "tired", "rest"],
+    "answer": "Aim for 7–9 hours of sleep each night."
+  },
+  {
+    "keywords": ["stress", "anxious", "overwhelmed"],
+    "answer": "Try deep breathing, meditation, or a short walk to reduce stress."
+  },
+  {
+    "keywords": ["eat", "food", "diet", "nutrition", "hungry"],
+    "answer": "Aim for a balanced diet of fruits, vegetables, whole grains, and lean protein."
+  },
+  {
+    "keywords": ["exercise", "workout", "movement"],
+    "answer" : "Adults should try to get at least 30 minutes of exercise every day."
+  }
+]
